# CyberSentinel

./: .git_commit_msg.txt  README.md  build.gradle.kts  gradle.properties  ic_launcher_background.xml  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.cybersentinel.app.data.local.AppDatabase/: 2.json  3.json  4.json  5.json
app/src/androidTest/java/com/cybersentinel/app/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/cybersentinel/app/domain/llm/: LlmPipelineSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/cybersentinel/app/: CyberSentinelApp.kt  MainActivity.kt
app/src/main/java/com/cybersentinel/app/data/kev/: KevCatalog.kt
app/src/main/java/com/cybersentinel/app/data/local/: AppBaselineDao.kt  AppBaselineEntity.kt  AppDatabase.kt  ConfigBaselineEntity.kt  CveDao.kt  CveEntity.kt  FavoriteDao.kt  FavoriteEntity.kt  KevDao.kt  SecurityEventEntity.kt
app/src/main/java/com/cybersentinel/app/data/remote/: CirclDtos.kt  CveApi.kt
app/src/main/java/com/cybersentinel/app/data/repo/: CveRepository.kt
app/src/main/java/com/cybersentinel/app/di/: DatabaseModule.kt  IncidentModule.kt  NetworkModule.kt
app/src/main/java/com/cybersentinel/app/domain/capability/: DeviceCapabilityProfile.kt  FeatureGatekeeper.kt
app/src/main/java/com/cybersentinel/app/domain/device/: DeviceProfileProvider.kt
app/src/main/java/com/cybersentinel/app/domain/explainability/: ExplanationEngine.kt  ExplanationModels.kt  ExplanationOrchestrator.kt  PolicyGuard.kt  TemplateExplanationEngine.kt
app/src/main/java/com/cybersentinel/app/ui/: AppNav.kt
app/src/main/java/com/cybersentinel/app/workers/: CveCheckWorker.kt
app/src/main/java/com/cybersentinel/data/preferences/: AppPreferences.kt
app/src/main/java/com/cybersentinel/di/: SettingsModule.kt
app/src/main/java/com/cybersentinel/navigation/: CyberSentinelNavigation.kt  Destinations.kt
app/src/main/java/com/cybersentinel/ui/common/: PermissionHelper.kt
app/src/main/res/drawable/: ic_cybersentinel_text.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cybersentinel/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+92 files in other folders)
